--- a/frontend/app/globals.css
+++ b/frontend/app/globals.css
@@ -5,6 +5,19 @@
   --foreground: #171717;
 }
 
+.line-clamp-1 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 1;
+}
+
+.line-clamp-2 {
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+}
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
